--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/BranchSubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/BranchSubscriberInvoiceReport.rdlc
@@ -1629,7 +1629,7 @@
         <Top>4.75042in</Top>
         <Left>0.22834in</Left>
         <Height>0.75in</Height>
-        <Width>7.60646in</Width>
+        <Width>7.60645in</Width>
         <ZIndex>5</ZIndex>
         <Style>
           <Border>
@@ -1642,6 +1642,9 @@
         <Parameters>
           <Parameter Name="BranchName">
             <Value>=Parameters!AccountName.Value</Value>
+          </Parameter>
+          <Parameter Name="Email">
+            <Value>=Parameters!Email.Value</Value>
           </Parameter>
         </Parameters>
         <Top>9.52306in</Top>
@@ -3053,6 +3056,12 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="Image">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="Email">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
