Finalize Invoice Layout
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41845

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
@@ -2502,15 +2502,52 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
         </Style>
       </Image>
     </ReportItems>
-    <Height>23.83579cm</Height>
+    <Height>22.88329cm</Height>
     <Style />
   </Body>
-  <Width>20.4868cm</Width>
+  <Width>20.01055cm</Width>
   <Page>
     <PageFooter>
-      <Height>0.02647cm</Height>
+      <Height>1.5cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
+      <ReportItems>
+        <Textbox Name="PageNumber">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>Page No. </Value>
+                  <Style />
+                </TextRun>
+                <TextRun>
+                  <Value>=Globals!PageNumber</Value>
+                  <Style />
+                </TextRun>
+              </TextRuns>
+              <Style>
+                <TextAlign>Right</TextAlign>
+              </Style>
+            </Paragraph>
+          </Paragraphs>
+          <rd:DefaultName>PageNumber</rd:DefaultName>
+          <Top>0.34395cm</Top>
+          <Left>15.507cm</Left>
+          <Height>0.6cm</Height>
+          <Width>4.405cm</Width>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+      </ReportItems>
       <Style>
         <Border>
           <Style>None</Style>
