use UISettings LongPrecision Value
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41846

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -48,7 +48,7 @@
                                        widthfactor="7"
                                        disablesorting="true">
                         <div style="text-align: right">
-                            <vr-label isvalue="true">{{dataItem.CurrentRate | number: 4}}</vr-label>
+                            <vr-label isvalue="true">{{dataItem.CurrentRate | number: viewScope.longPrecision }}</vr-label>
                             <span ng-if="dataItem.FutureNormalRate != null"
                                   style="cursor: pointer; text-decoration: underline"
                                   ng-click="viewScope.onCurrentRateClicked(dataItem)">*</span>
