Update Convertors, Refactor Payment Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41879

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Branche/Templates/BrancheConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Branche/Templates/BrancheConvertorEditor.html
@@ -33,7 +33,7 @@
                                               isrequired="true">
     </retail-be-accountpartdefinition-selector>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.branchColumnName" label="Branche ID Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.branchColumnName" label="Branch ID Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.companyColumnName" label="Company ID Column Name" isrequired="true"></vr-textbox>
