--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Subscriber/Templates/SubscriberConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Subscriber/Templates/SubscriberConvertorEditor.html
@@ -26,7 +26,7 @@
         <vr-textbox value="scopeModel.subscriberColumnName" label="Subscriber ID Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.branchColumnName" label="Branche ID Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.branchColumnName" label="Branch ID Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
    
 
