viwing rate in pricelist currency
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41897

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/OtherSaleRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/OtherSaleRateGridTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-datagrid on-ready="scopeModel.onGridReady" datasource="scopeModel.otherSaleRates" idfield="Entity.SaleRateId" hidegridmenu>
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Rate'" field="'ConvertedRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate Type'" field="'RateTypeName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
