--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
@@ -7,7 +7,7 @@
                  idfield="Entity.SaleRateId"
                  enableautoexport="true">
         <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Rate'" field="'ConvertedRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="5"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="5"></vr-datagridcolumn>
         <vr-datagridcolumn fixedwidth="'35'" headertext="'Rate Change'" invisibleheader>
             <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIcon" tooltip="dataItem.RateChangeTypeIconTooltip" inline></vr-icon>
         </vr-datagridcolumn>
