--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3274,13 +3274,13 @@ vr-overall-widget  .list-group-item {
 .vr-tile-inner-container .title{
    font-size:16px;
    font-weight:bold;
-   text-align: center;
+   text-align: right;
 }
 .vr-tile-inner-container .tilevalue span{
    font-size:11px;     
    width:50%;
    display:inline-block;
-   text-align: center;
+   text-align: right;
 }
 @media (min-width: 1280px) {
    .vr-tile .thumbnail-section img {
