--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
@@ -14,7 +14,7 @@
                     </span>
                 </vr-columns>
                 <vr-columns width="1/2row">
-                    <vr-datetimepicker type="dateTime" label="BED" value="scopeModel.bed" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="dateTime" label="BED" value="scopeModel.bed" isrequired onvaluechanged="scopeModel.bedChangedValue"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </vr-form>
