Refactored some code according to the currency notes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41922

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -101,6 +101,7 @@
                             <vr-textbox type="number"
                                         value="dataItem.NewRate"
                                         customvalidate="dataItem.validateNewRate()"
+                                        decimalprecision="{{viewScope.scopeModel.longPrecision}}"
                                         onvaluechanged="viewScope.onNewRateChanged(dataItem)"
                                         onblurtextbox="viewScope.onNewRateBlurred(dataItem)"
                                         tonextinput>
