--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
@@ -1,36 +1,39 @@
 ﻿<div vr-modalcontent ng-controller="Reprocess_ReprocessDefinitionEditorController" width="'40%'" vr-loader="scopeModel.isLoading">
     <vr-modalbody>
         <vr-form name="formStyleDefinitionEditor">
-
             <vr-section header="Definition">
                 <vr-row>
                     <vr-columns width="1/2row">
                         <vr-textbox label="Name" value="scopeModel.name" isrequired></vr-textbox>
                     </vr-columns>
                     <vr-columns width="1/2row">
+                        <vr-label>Data Storage Records</vr-label>
                         <vr-genericdata-datarecordstorage-selector on-ready="scopeModel.onDataRecordStorageSelectorReady" selectedvalues="scopeModel.selectedRecordStorage"
-                                                                   onselectionchanged="scopeModel.onDataRecordStorageSelectionChanged" isrequired="true"></vr-genericdata-datarecordstorage-selector>
+                                                                   onselectionchanged="scopeModel.onDataRecordStorageSelectionChanged" isrequired="true" ismultipleselection
+                                                                   customvalidate="scopeModel.validateDataRecordStorageSelector" hidelable>
+                        </vr-genericdata-datarecordstorage-selector>
                     </vr-columns>
                 </vr-row>
                 <vr-row>
                     <vr-columns width="1/2row">
-                        <vr-queueing-executionflowdefinition-selector on-ready="scopeModel.onExecutionFlowDefinitionSelectorReady" onselectionchanged="scopeModel.onExecutionFlowDefinitionSelectionChanged"
-                                                                      isrequired="true" hideremoveicon="true"></vr-queueing-executionflowdefinition-selector>
+                        <vr-queueing-executionflowdefinition-selector on-ready="scopeModel.onExecutionFlowDefinitionSelectorReady"
+                                                                      onselectionchanged="scopeModel.onExecutionFlowDefinitionSelectionChanged"
+                                                                      isrequired="true" hideremoveicon="true">
+                        </vr-queueing-executionflowdefinition-selector>
                     </vr-columns>
                     <vr-columns width="1/2row" vr-loader="scopeModel.isLoadingSatge">
-                        <vr-queueing-executionflow-stage-selector on-ready="scopeModel.onStageSelectorReady" isrequired="true" ismultipleselection onselectionchanged="scopeModel.onStageSelectorSelectionChanged" selectedvalues="scopeModel.exStages"></vr-queueing-executionflow-stage-selector>
+                        <vr-queueing-executionflow-stage-selector on-ready="scopeModel.onStageSelectorReady" onselectionchanged="scopeModel.onStageSelectorSelectionChanged" selectedvalues="scopeModel.exStages" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
                     </vr-columns>
                 </vr-row>
                 <vr-row>
                     <vr-columns width="1/2row" vr-loader="scopeModel.isLoadingExecutionFlowStages">
-                        <vr-queueing-executionflow-stage-selector customlabel="Initial Stages" on-ready="scopeModel.onExecutionFlowStageSelectorReady" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
+                        <vr-queueing-executionflow-stage-selector on-ready="scopeModel.onExecutionFlowStageSelectorReady" customlabel="Initial Stages" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
                     </vr-columns>
                     <vr-columns width="1/2row">
                         <vr-textbox value="scopeModel.recordCountPerTransaction" label="Record Count Per Transaction" type="number" decimalprecision="0" minvalue="1" isrequired></vr-textbox>
                     </vr-columns>
                 </vr-row>
             </vr-section>
-
             <vr-section header="CDR Import">
                 <vr-row>
                     <vr-columns width="1/2row" vr-loader="scopeModel.isLoadingSatgesToHold">
