--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
@@ -10,13 +10,15 @@
     <vr-datagridcolumn headertext="'EED'" field="'Entity.Settings.EndDate'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Grace Period'" field="'Entity.Settings.GracePeriod'" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Amount'" field="'SellingAmount'" type="'Number'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Selling Volume'" field="'SellingVolume'"  type="'Number'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Buying Amount'" field="'BuyingAmount'"   type="'Number'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Buying Volume'" field="'BuyingVolume'"   type="'Number'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Effective'" field="'IsEffective'"><span ng-show="{{dataItem.IsEffective}}"><vr-icon icontype="dataItem.IsEffective"></vr-icon></span> </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Selling Volume'" field="'SellingVolume'" type="'Number'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Buying Amount'" field="'BuyingAmount'" type="'Number'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Buying Volume'" field="'BuyingVolume'" type="'Number'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Effective'" field="'IsEffective'">
+        <span ng-show="{{dataItem.IsEffective}}"><vr-icon icontype="dataItem.IsEffective"></vr-icon></span>
+    </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Deal Type'" field="'TypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Deal Contract'" field="'ContractDescription'" type="'Text'"></vr-datagridcolumn>
-
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbole'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
