--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
@@ -1,5 +1,5 @@
 ﻿<vr-panel ng-controller="WhS_CP_CodePreparationManagementController">
-    <vr-form validationcontext="filterGroupValid">
+    <vr-form validationcontext="filterGroupValid" vr-loader="isLoading">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilter">
             <vr-row removeline>
                 <vr-validation-group validationcontext="SearchGroup">
