Implementing teles site provision
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41979

--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ChangeUsersRGs/Templates/RevertUsersRGsProvisionerDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ChangeUsersRGs/Templates/RevertUsersRGsProvisionerDefinitionSettingsTemplate.html
@@ -4,4 +4,15 @@
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.actionType" label="Action Type" isrequired="true"></vr-textbox>
     </vr-columns>
+
+    <retail-be-accounttype-selector on-ready="scopeModel.onCompanyAccountTypeSelectorReady"
+                                    normal-col-num="6"
+                                    customlabel="Company Account Type"
+                                    isrequired="true">
+    </retail-be-accounttype-selector>
+    <retail-be-accounttype-selector on-ready="scopeModel.onSiteAccountTypeSelectorReady"
+                                    customlabel="Site Account Type"
+                                    normal-col-num="6"
+                                    isrequired="true">
+    </retail-be-accounttype-selector>
 </vr-row>
