Allowed the user to group account usages by transaction type
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41982

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
@@ -17,9 +17,10 @@
                                             isrequired="true"
                                             normal-col-num="6">
             </vr-accountusage-periodsettings>
+            <vr-columns width="1/2row">
+                <vr-switch label="Group Usages by Transaction Type" value="scopeModel.shouldGroupUsagesByTransactionType"></vr-switch>
+            </vr-columns>
         </vr-row>
-       
-
     </vr-tab>
     <vr-tab header="'Relation Type'">
         <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="6"></vr-invtoaccbalancerelation-definition-selector>
