--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountCondition/MainExtensions/Templates/FilterGroupAccountConditionTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountCondition/MainExtensions/Templates/FilterGroupAccountConditionTemplate.html
@@ -1,3 +1,5 @@
-﻿<vr-section title="Advanced Filter" collapsible>
-    <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
-</vr-section>
+﻿<vr-columns width="fullrow">
+    <vr-section title="Advanced Filter" collapsible>
+        <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
+    </vr-section>
+</vr-columns>
