Reselected the customer's default currency after deleting the draft
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41993

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
@@ -48,7 +48,7 @@
                     <span ng-show="isSettingsSelected && showCarrierAccountSelector">
                         <vr-common-currency-selector on-ready="onCurrencySelectorReady"
                                                      normal-col-num="2"
-                                                     onselectionchanged="onCurrencyChanged"
+                                                     onselectitem="onCurrencyChanged"
                                                      isrequired="showCarrierAccountSelector">
                         </vr-common-currency-selector>
                     </span>
