changing name of buttons in rate plan preview
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42004

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlanPreview.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlanPreview.html
@@ -183,8 +183,8 @@
 	<div>
 		<vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
 			<div transclude-to="buttons">
-				<vr-button type="Save" formname="formRatePlanPreview" data-onclick="scopeModel.save"></vr-button>
-				<vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+                <vr-button type="Continue" formname="formRatePlanPreview" data-onclick="scopeModel.continueTask"></vr-button>
+                <vr-button type="Stop" data-onclick="scopeModel.stopTask"></vr-button>
 			</div>
 		</vr-actionbar>
 	</div>
