--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/Currency/CurrencyManagement.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/Currency/CurrencyManagement.html
@@ -14,7 +14,7 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
-                    <vr-button type="Add" data-onclick="addNewCurrency"></vr-button>
+                    <vr-button type="Add" data-onclick="addNewCurrency" haspermission="hasAddCurrencyPermission"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
