--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Currency/Templates/CurrencySettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Currency/Templates/CurrencySettings.html
@@ -1,1 +1,1 @@
-﻿<vr-common-currency-selector on-ready="onCurrencySelectReady" isrequired="true" normal-col-num="6" showaddbutton showviewbutton></vr-common-currency-selector>
+﻿<vr-common-currency-selector on-ready="onCurrencySelectReady" isrequired="true" normal-col-num="6" showaddbutton ></vr-common-currency-selector>
